# tg_bot_shop

./: .env.example  Dockerfile.bot  LICENSE  README.md  docker-compose.yaml  pyproject.toml
admin_panel/: create_superuser.py
admin_panel/apps/cart/: models.py
admin_panel/apps/cart/migrations/: 0001_initial.py
admin_panel/apps/catalog/: admin.py  models.py
admin_panel/apps/catalog/migrations/: 0001_initial.py
admin_panel/apps/orders/: admin.py  models.py
admin_panel/apps/orders/migrations/: 0001_initial.py
admin_panel/apps/tgbot/: admin.py  models.py  tasks.py
admin_panel/apps/tgbot/migrations/: 0001_initial.py  0002_mailing.py
admin_panel/project/: asgi.py  celery.py  config.py  settings.py  urls.py  wsgi.py
tg_bot/: __main__.py
tg_bot/bot/: config.py
tg_bot/bot/src/: __init__.py  routes.py
tg_bot/bot/src/dialogs/: __init__.py  dialog_routes.py
tg_bot/bot/src/dialogs/cart/: __init__.py  dialogs.py  filters.py  getters.py  handlers.py  services.py
tg_bot/bot/src/dialogs/catalog/: __init__.py  dialogs.py  getters.py  handlers.py
tg_bot/bot/src/dialogs/main_menu/: dialogs.py
tg_bot/bot/src/getters/: kbd.py
tg_bot/bot/src/handlers/: __init__.py  command_handlers.py  inline_mode_handlers.py  payment_handlers.py
tg_bot/bot/src/menu/: menu.py
tg_bot/bot/src/middlewares/: __init__.py  subscribe_middleware.py  user_middleware.py
tg_bot/bot/src/states/: states.py
tg_bot/bot/src/utils/: __init__.py  order_writer.py  subscribes.py
